Style files addition

--- a/index.html
+++ b/index.html
@@ -2,152 +2,8 @@
 <html>
 <head>
 	<title>Google Homepage</title>
-	<style>
-		/* CSS Reset */
-			html, body, div, span, applet, object, iframe,
-			h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-			a, abbr, acronym, address, big, cite, code,
-			del, dfn, em, img, ins, kbd, q, s, samp,
-			small, strike, strong, sub, sup, tt, var,
-			b, u, i, center,
-			dl, dt, dd, ol, ul, li,
-			fieldset, form, label, legend,
-			table, caption, tbody, tfoot, thead, tr, th, td,
-			article, aside, canvas, details, embed, 
-			figure, figcaption, footer, header, hgroup, 
-			menu, nav, output, ruby, section, summary,
-			time, mark, audio, video {
-				margin: 0;
-				padding: 0;
-				border: 0;
-				font-size: 100%;
-				font: inherit;
-				vertical-align: baseline;
-			}
-			/* HTML5 display-role reset for older browsers */
-			article, aside, details, figcaption, figure, 
-			footer, header, hgroup, menu, nav, section {
-				display: block;
-			}
-			body {
-				line-height: 1;
-			}
-			ol, ul {
-				list-style: none;
-			}
-			blockquote, q {
-				quotes: none;
-			}
-			blockquote:before, blockquote:after,
-			q:before, q:after {
-				content: '';
-				content: none;
-			}
-			table {
-				border-collapse: collapse;
-				border-spacing: 0;
-			}
-
-		/* Page Style */
-			body {
-				font-family: arial,sans-serif;;
-			}
-			#container {
-				display: flex;
-				flex-direction: column;
-				padding: 20px 0;
-			}
-			header{
-				height: 4vh;
-			}
-			.googNavigation li {
-				display: inline;
-			}
-			.googNavigation li a {
-				display: inline-block;
-				padding: 0 7px 0 15px;
-				color: #000;
-				opacity: 0.75;
-				font-size: 13px;
-				text-decoration: none;
-			}
-			.googNavigation li a:hover {
-				text-decoration: underline;
-			}
-			#googHeaderNavigation1 {
-				width: 250px;
-				float: left;
-			}
-			#googHeaderNavigation2 {
-				width: 250px;
-				float: right;
-				text-align: right;
-			}
-
-			#main {
-				width: 100%;
-			    height: 100%;
-			    height: 81vh;
-			    display: flex;
-			    flex-direction: column;
-			    justify-content: center;
-			    align-items: center;
-			}
-			.googSearch {
-				width: 500px;
-			}
-			#googImg {
-				width: 300px;
-				margin: 0 auto;
-    			display: block;
-			}
-			.googSearch input[type=text]{
-				margin: 0 auto;
-			    display: block;
-			    width: 100%;
-			    height: 38px;
-			    border-radius: 20px;
-			    border: 1px solid #d0d0d0;
-			}
-			.googSearch p {
-				text-align: center;
-			}
-			.actions {
-				display: block;
-			    width: auto;
-			    text-align: center;
-			}
-
-			footer {
-				height: 107px;
-			    width: 100%;
-			    background: #f2f2f2;
-			    position: absolute;
-			    bottom: 0;
-			}
-			footer section {
-				border-top: 1px solid #e4e4e4;
-			}
-			#googLocation p {
-				padding: 20px 15px;
-				color: #000;
-				opacity: 0.75;
-			}
-			.footerNavs {
-				padding: 15px 0;
-				height: 15px;
-			}
-			#googFooterNavigation1{
-				width: 350px;
-				float: left;
-			}
-			#googFooterNavigation2 {
-				width: 250px;
-				float: right;
-				text-align: right;
-			}
-
-	</style>
+	<link href="styles/reset.css" rel="stylesheet" type="text/css">
+	<link href="styles/index.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div id="container">
